# moltis

./: .envrc-example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  agent-presets.html  changelog.html  channels.html  cliff.toml  discord.html  docker.html  justfile  print.html  providers.html  rust-toolchain.toml  searchindex.js  session-tools.html  toc.html  toc.js  tool-registry.html  whatsapp.html
.claude/: settings.json
.claude/hooks/: rename-plan.sh  save-session.sh
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml  feature_request.yml  model_behavior.yml
.github/workflows/: ci.yml  release.yml
apps/courier/: Cargo.toml  README.md
apps/courier/deploy/: ansible.cfg  playbook.yml
apps/courier/deploy/group_vars/: courier.yml
apps/courier/deploy/inventory/: hosts.yml
apps/courier/deploy/roles/courier/handlers/: main.yml
apps/courier/deploy/roles/courier/tasks/: main.yml
apps/courier/deploy/roles/courier/templates/: Caddyfile.j2  moltis-courier.env.j2  moltis-courier.service.j2
apps/courier/src/: main.rs
apps/ios/: .swiftlint.yml  CHANGELOG.md  CLAUDE.md  Info.plist  Moltis.entitlements  apollo-codegen-config.json  local.xcconfig.example  project.yml
apps/ios/Sources/: MoltisApp.swift
apps/ios/Widget/: IntentCardView.swift  MoltisLiveActivity.swift  MoltisWidgetBundle.swift
apps/macos/: .swiftlint.yml  CHANGELOG.md
apps/macos/Sources/: ChatStore.swift  ContentView.swift  MoltisApp.swift  MoltisClient.swift  NetworkAuditPane.swift  NetworkAuditStore.swift  SettingsSectionContent.swift  SettingsView.swift
crates/agents/src/: lib.rs  model.rs  prompt.rs  response_sanitizer.rs  runner.rs  tool_parsing.rs  tool_registry.rs
crates/auth/src/: webauthn.rs
crates/browser/src/: container.rs  pool.rs
crates/channels/: Cargo.toml
crates/channels/src/: lib.rs  message_log.rs  plugin.rs  store.rs
crates/chat/src/: chat_error.rs  lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: auth_commands.rs  browser_commands.rs  doctor_commands.rs  import_commands.rs  sandbox_commands.rs
crates/config/src/: lib.rs  schema.rs  template.rs  validate.rs
crates/cron/src/: store_file.rs
crates/discord/: Cargo.toml
crates/discord/src/: access.rs  commands.rs  config.rs  error.rs  handler.rs  lib.rs  outbound.rs  plugin.rs  state.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: approval.rs  auth_middleware.rs  auth_routes.rs  broadcast.rs  channel.rs  channel_agent_tools.rs  channel_events.rs  channel_outbound.rs  channel_store.rs  env_routes.rs  lib.rs  mdns.rs  message_log_store.rs  metrics_routes.rs  network_audit.rs  onboarding.rs  server.rs  services.rs  session.rs  state.rs  tailscale_routes.rs  voice.rs  ws.rs
crates/gateway/tests/: auth_middleware.rs  chat_ui.rs
crates/graphql/src/: scalars.rs
crates/graphql/tests/: integration.rs
crates/mcp/src/: tool_bridge.rs
crates/memory/: Cargo.toml
crates/memory/src/: lib.rs  search.rs  store.rs
crates/metrics/src/: store.rs
crates/msteams/src/: outbound.rs  plugin.rs
crates/network-filter/: Cargo.toml
crates/network-filter/src/: buffer.rs  domain_approval.rs  error.rs  lib.rs  proxy.rs  types.rs
crates/oauth/src/: callback_server.rs  (+1 more)
crates/openclaw-import/: Cargo.toml
crates/schema-export/: Cargo.toml  build.rs
crates/schema-export/src/: main.rs
crates/swift-bridge/: Cargo.toml  cbindgen.toml
crates/swift-bridge/src/: lib.rs
crates/tls/: Cargo.toml
crates/tools/: Cargo.toml
crates/wasm-precompile/: Cargo.toml
crates/wasm-tools/calc/: Cargo.toml
crates/wasm-tools/calc/src/: lib.rs
crates/wasm-tools/web-search/: Cargo.toml
crates/wasm-tools/web-search/src/: lib.rs
crates/web/: Cargo.toml
crates/whatsapp/: Cargo.toml
docs/src/: SUMMARY.md  anthropic-oauth.md  browser-automation.md  cloud-deploy.md  comparison.md  configuration.md  discord.md  docker.md  index.md  mcp.md  openclaw-import.md  providers.md  quickstart.md  sandbox.md  security.md  system-prompt.md  trusted-network.md  whatsapp.md
examples/: docker-compose.coolify.yml  docker-compose.yml
plans/: 2026-02-15-session-typed-refactor-plan.md  2026-02-15-typed-broadcast-event-enum.md  2026-02-16-ghostty-wasm-terminal-plan.md  2026-02-17-terminal-multi-tmux-tabs-plan.md  2026-02-27-plan-ios-secure-relay-proxy.md  wasm-implementation.md
scripts/: build-swift-bridge.sh  check-changelog-guard.sh  generate-ios-graphql.sh  generate-ios-project.sh  i18n-check.sh  local-validate.sh  prepare-release.sh
snap/: snapcraft.yaml
wit/: moltis-http.wit  moltis-tool.wit
(+207 files in other folders)
